--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,7 @@
   </description>
   
   
-  <maintainer email="randelmc21gmail.com">Randel Capati</maintainer>
+  <maintainer email="randelmc21@gmail.com">Randel Capati</maintainer>
   <maintainer email="xiao@mogi.io">xiao</maintainer>
   <license>Apache License 2.0</license>
   <author>Randel Capati</author>
